# monjour

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
demo/: configuration.py  demo_app.py
demo/app/: demo_app.py  demo_importer.py
demo/pages/: Test.py
docs/dev/: development_setup.md  todo.md
lib/: __init__.py  __main__.py  app.py  archive.py  engine.py  framework.py  log.py  prelude.py
lib/core/: __init__.py  account.py  archive.py  importer.py  merge.py
lib/importers/: __init__.py  amazon.py  paypal.py  unicredit.py  unicredit_it.py
lib/providers/generic/: csv_importer.py
lib/providers/paypal/: paypal_account.py
lib/providers/unicredit/: __init__.py  unic_account.py  unic_merger.py
lib/st/: __init__.py  app.py  import.py  st_home.py
lib/st/pages/: import.py
lib/utils/: locale_importer.py
monjour/: __init__.py  __main__.py  app.py  prelude.py
monjour/core/: __init__.py  account.py  archive.py  category.py  common.py  config.py  constants.py  executor.py  globals.py  importer.py  log.py  merge.py  rule.py  transaction.py  transformation.py
monjour/providers/generic/: __init__.py  bank_account.py  csv_importer.py
monjour/providers/paypal/: paypal_account.py  paypal_types.py
monjour/providers/unicredit/: __init__.py  unic_account.py  unic_categories.py  unic_merger.py  unic_types.py
monjour/replay/: app_interactive.py
monjour/st/: __init__.py  st_app.py  st_home.py  st_main.py  st_views.py
monjour/st/components/: archive_editor.py  df_explorer.py  diff.py  file_import.py  master_df.py
monjour/st/data/: main_df.py
monjour/st/pages/: home.py  import.py
monjour/st/ui/: archive.py  debug.py  import.py  view.py
monjour/st/utils/: __init__.py  cache.py  master_df.py  page.py
monjour/utils/: console.py  debug_executor.py  diagnostics.py  locale_importer.py  regex_parser.py
(+33 files in other folders)
