[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monjour"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
authors = [
    { name = "Riccardo Piola", email = "riccardopiola@live.it" }
]
license = { file = "LICENSE" }
keywords = ["sample", "example", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
streamlit = ["streamlit"]
examples = ["streamlit", "jupyter"]

[project.scripts]
tracker = "my_module.example:run_example"

[tool.setuptools]
packages = ["monjour"]
